--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <script type="text/javascript" src="javascripts/modernizr.js"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="https://github.com/razorstorm/SnipeTheWeb/raw/master/snipetheweb.user.js" type="text/javascript"></script>
     <script type="text/javascript" src="javascripts/headsmart.min.js"></script>
     <script type="text/javascript">
       $(document).ready(function () {
